--- a/Phone/phone.css
+++ b/Phone/phone.css
@@ -468,9 +468,12 @@ h1 {
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    height: 38px;
+    max-width: 240px;
+    height: 30px;
     overflow: hidden;
+    text-overflow: ellipsis;
     text-wrap: nowrap;
+    word-break: keep-all;
 }
 
 .author {
