--- a/Phone/phone.css
+++ b/Phone/phone.css
@@ -470,6 +470,7 @@ h1 {
     font-size: 20px;
     max-width: 240px;
     height: 30px;
+    line-height: 24px;
     overflow: hidden;
     text-overflow: ellipsis;
     text-wrap: nowrap;
