--- a/Phone/phone.css
+++ b/Phone/phone.css
@@ -467,13 +467,10 @@ h1 {
     display: flex;
     justify-content: center;
     font-size: 20px;
-    max-width: 240px;
-    height: 30px;
-    line-height: 24px;
+    width: 240px;
     overflow: hidden;
     text-overflow: ellipsis;
     text-wrap: nowrap;
-    flex-wrap: nowrap;
 }
 
 .author {
